# emci

./: .gitignore  ChangeLog.md  README.md  default.nix  emci.cabal
app/: Main.hs
dhall/: emci.dhall  meta.dhall  meta_tmp.dhall
src/: Emci.hs
src/Emci/: Checkout.hs  Effects.hs  Mirror.hs  Pretty.hs  Types.hs  Util.hs
src/Emci/Effects/: Filesystem.hs  Git.hs  Nix.hs  Process.hs  Time.hs
